# s3-proxy-poc

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.tests  Makefile  README.md  docker-compose.yaml  pyproject.toml
s3proxy/: __init__.py  aws.py  client.py  config.py  http_client.py  logging.py  main.py  sentry.py
s3proxy/awssigv4/: __init__.py  sigv4.py
tests/: test_cli.py
tests/e2e/: s3client.py  test_basics.py
