[tool.poetry]
name = "s3proxy"
version = "0.1.2"
description = ""
authors = ["Lukasz Jachym <lukasz.jachym@gmail.com>"]
readme = "README.md"
packages = [{include = "s3proxy"}]

[tool.poetry.dependencies]
python = "^3.11"
starlette = "^0.27.0"
uvicorn = "^0.22.0"
httpx = "^0.24.1"
dotenv-cli = "^3.1.1"
pydantic = {extras = ["dotenv"], version = "^2.0.1"}
pydantic-settings = "^2.0.0"
boto3 = "^1.28.4"
sentry-sdk = {extras = ["starlette"], version = "^1.28.1"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^7"
black = "^23.1.0"
pre-commit = "^3.1.0"
flake8 = "^6.0.0"
mypy = "^1.0.1"
isort = "^5.12.0"

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]

[tool.black]
line-length = 120

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true

[tool.isort]
profile = "black"
src_paths = ["s3proxy", "tests"]
